--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
   <h2>Please answer the following:</h2> <br>
 
  <label class="container">
-  <input id="ccorp" type="checkbox" required value="true" checked>  You are NOT a C corporation
+  <input id="ccorp" type="checkbox" required value="true">  You are NOT a C corporation
   <span class="checkmark"></span><br>
  </label>
  
  <label class="container">
-  <input id="smallbus" type="checkbox" required value="true" checked> You own stock in a Qualified Small Business
+  <input id="smallbus" type="checkbox" required value="true"> You own stock in a Qualified Small Business
   <span class="checkmark"></span>
  </label>
  
  <label class="container">
-  <input id="originalissue" type="checkbox" required value="true"checked >  Original Issue Requirement is satisfied
+  <input id="originalissue" type="checkbox" required value="true">  Original Issue Requirement is satisfied
   <span class="checkmark"></span>
  </label>
  
  <label class="container">
-  <input id="qsbreq" type="checkbox"required value="true"checked>  Qualified Small Business Requirement is satisfied
+  <input id="qsbreq" type="checkbox"required value="true">  Qualified Small Business Requirement is satisfied
   <span class="checkmark"></span>
  </label>
  
  <label class="container">
-  <input id="activebus" type="checkbox" required value = "true" checked>  Active Business Requirement is satisfied
+  <input id="activebus" type="checkbox" required value = "true">  Active Business Requirement is satisfied
   <span class="checkmark"></span>
  </label>
  
