--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
  </label><br>
  
 <p>
-<button type="submit" onclick="myGains()">Results</button>
+<button type="submit" class="button-primary" onclick="myGains()">Results</button>
 </p>
 
 </div>
