--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
 </p>
 
 </div>
-
+<div class="container">
 <section class="section results">
-  <p class="message1202"></p>
+  <h1 class="message1202"></h1>
   <p id="disclaimer1202"></p>
   <p id = "marcus">Powered by:
     <a href="https://monumentcpa.com">Monument Accounting LLC</a>
   </p>
 </section>
+</div>
 
 
 
